--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Frank Atukunda",
   "license": "MIT",
   "dependencies": {
-    "socket.io": "^2.3.0",
     "algoliasearch": "^3.35.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
@@ -22,6 +21,8 @@
     "mongoose": "^5.5.14",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.2",
+    "puppeteer": "^2.1.1",
+    "socket.io": "^2.3.0",
     "stripe": "^7.13.0",
     "validator": "^11.0.0"
   },
