--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "puppeteer": "^2.1.1",
     "socket.io": "^2.3.0",
     "stripe": "^7.13.0",
+    "uuid": "^8.0.0",
     "validator": "^11.0.0"
   },
   "devDependencies": {
