--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ JWT_KEY=shhhhh
 ALGOLIA_ID=C3JQIECXEF
 ALGOLIA_API_KEY=e8e48941b34399cb6c1364ada6a4d5e8
 UPLOAD_PATH=data
-UPLOAD_HOST=https://api.gdpr-checker.willally.com/
+UPLOAD_HOST=https://api.gdpr-checker.willally.com
 CONCIERGERIE=localhost:9090
 STRIPE_PUBLISHABLE_KEY=sk_test_Ct5WiuAQbJqbSpxbyYuBaiZa
